<resources>
    <string name="app_name">Muallim</string>

    <!--    test Ids-->
    <string name="app_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_admin_dashboard_ID">ca-app-pub-3940256099942544/6300978111</string>


    <!--    orignal Ids-->

    <!--    <string name="app_ID">ca-app-pub-8888309555375101~7964544955</string>-->
    <!--    <string name="banner_ID">ca-app-pub-8888309555375101/4955238239</string>-->


    <string name="alert">
        if you registration az a teacher so you contact me +92 307 6061363 before registrations so I will give to you user-id
    </string>

    <string name="addTuition">Add Tuition</string>
    <string name="tuition">Tuition</string>

    <string name="schoolName">School Name</string>
    <string name="className">Class</string>
    <string name="numbersOfStudents">How Many Students</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="saveTuition">Save</string>


    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="cPass">Confirm Password</string>
    <string name="logIn">Log IN</string>

    <string name="profileUpdate">Update Profile</string>


    <string name="registrations">Registration</string>

    <string name="adminRegistrations">Admin Registrations</string>
    <string name="studentRegistrations"> Student Registration</string>
    <string name="teacherRegistrations">Teacher Registrations</string>


    <string name="name">Full Name</string>
    <string name="contactNumber">Contact Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="cnic">C.N.I.C</string>
    <string name="qualification">Qualification</string>
    <string name="classesYouCanTeach">Classes You Can Teach</string>
    <string name="subjectsYouCanTeach">Subjects You Can Teach</string>
    <string name="anyExperienceOfTeaching">Any Experience of Teaching</string>
    <string name="preferableTeachingArea">Preferable Teaching Area</string>
    <string name="userID">User ID</string>
    <string name="signUp">Sign UP</string>

    <string name="description">Description</string>
    <string-array name="role">

        <item>Select</item>
        <item>Admin</item>
        <item>Teacher</item>
        <!--        <item>Student</item>-->


    </string-array>

    <string-array name="youCanTeach">
        <item>Which Class do you Teach</item>
        <item>Matric</item>
        <item>FSC</item>
    </string-array>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>FeMale</item>
    </string-array>

    <string-array name="howDidYouFindUs">
        <item>How Did You Find Us</item>
        <item>Facebook</item>
        <item>Friends</item>
        <item>Adds</item>
        <item>Colleague</item>
        <item>NEWS Paper</item>
        <item>Others</item>

    </string-array>

    <string-array name="route">
        <item>Select Route Code</item>
        <item>R1</item>
        <item>R2</item>
        <item>R3</item>
        <item>R4</item>
        <item>R5</item>
        <item>R6</item>
        <item>R7</item>
    </string-array>
    <string name="title_activity_update_my_teacher_profile">UpdateMyTeacherProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--    View Profile-->
    <string name="viewProfile">View Profile</string>
</resources>